@@ -79,6 +79,7 @@
 * StripePI: Last4 From Payment Method [naashton] #5322
 * New Card Type: Patagonia365 [gasb150] #5265
 * Decidir: Patagonia365 Card Type Mapping [naashton] #5324
+* Ebanx: Add network token support [Buitragox] #5263
 
 == Version 1.137.0 (August 2, 2024)
 * Unlock dependency on `rexml` to allow fixing a CVE (#5181).
